--- a/app/src/main/res/drawable/full_border_edit_text_shape.xml
+++ b/app/src/main/res/drawable/full_border_edit_text_shape.xml
@@ -6,6 +6,7 @@
             android:shape="rectangle">
             <stroke android:width="1.5dp"
                 android:color="@color/colorAccent"/>
+            <solid android:color="#00000000" />
         </shape>
     </item>
 </selector>
