--- a/app/src/main/res/layout/content_merchant_back_office.xml
+++ b/app/src/main/res/layout/content_merchant_back_office.xml
@@ -23,49 +23,52 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/chartLayout"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone"
-                tools:context="co.loystar.loystarbusiness.fragments.ChartFragment">
-
-                <Button
-                    android:id="@+id/viewHistoryBtn"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/view_sales_history"
-                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent" />
+                android:visibility="gone">
 
                 <LinearLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="175dp"
-                    android:gravity="end"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/viewHistoryBtn">
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_gravity="center_horizontal"
-                        android:textStyle="bold"
-                        android:textColor="@color/primaryTextColor"
-                        android:id="@+id/total_sales_for_today_value"
-                        android:layout_width="wrap_content"
-                        android:textSize="16sp"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_gravity="center_horizontal"
-                        android:id="@+id/total_sales_for_today_label"
-                        android:layout_width="wrap_content"
+                    <Button
+                        android:id="@+id/viewHistoryBtn"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/wallet_hint_foreground_holo_dark"
-                        android:text="@string/total_sales_for_today_label" />
+                        android:text="@string/view_sales_history" />
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout2"
+                        android:layout_width="0dp"
+                        android:gravity="end"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_gravity="center_horizontal"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            android:textColor="@color/primaryTextColor"
+                            android:id="@+id/total_sales_for_today_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_gravity="center_horizontal"
+                            android:id="@+id/total_sales_for_today_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/wallet_hint_foreground_holo_dark"
+                            android:text="@string/total_sales_for_today_label" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -78,8 +81,6 @@
                     android:layout_marginRight="1dp"
                     android:layout_marginStart="1dp"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/viewHistoryBtn"
                     card_view:cardElevation="4dp"
                     card_view:cardUseCompatPadding="true">
 
@@ -98,11 +99,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/record_sale"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/chartCardView" />
+                    android:layout_gravity="center" />
 
-            </android.support.constraint.ConstraintLayout>
+            </LinearLayout>
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
