--- a/app/src/main/res/layout/sale_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/sale_detail_bottom_sheet.xml
@@ -45,21 +45,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:id="@+id/total_label"
+                android:text="@string/total_label"
                 android:gravity="end|center_vertical"/>
 
             <LinearLayout
                 android:layout_marginTop="4dp"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:id="@+id/sales_summary"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/sales_summary_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/sales_summary"
+                    android:text="@string/cash_sales"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:layout_marginRight="8dp"
@@ -72,7 +70,43 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/total_sales"
+                        android:id="@+id/total_cash_sales"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:background="@color/green"
+                        android:padding="8dp"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="4dp"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_sales"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/total_card_sales"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
