--- a/app/src/main/res/layout/sales_history_item.xml
+++ b/app/src/main/res/layout/sales_history_item.xml
@@ -34,14 +34,11 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/customer_name_label"
+                    android:id="@+id/products_bought"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
                     android:layout_marginRight="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:layout_marginEnd="8dp" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
