--- a/app/src/main/res/layout/sales_history_item.xml
+++ b/app/src/main/res/layout/sales_history_item.xml
@@ -34,27 +34,21 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:layout_weight="1.2"
                     android:id="@+id/products_bought"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
                     android:layout_marginEnd="8dp" />
 
-                <RelativeLayout
+                <TextView
+                    android:layout_gravity="end"
+                    android:gravity="end"
+                    android:layout_weight="0.8"
+                    android:id="@+id/total_sales"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/total_sales"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/primaryTextColor"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                </RelativeLayout>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryTextColor"/>
 
             </LinearLayout>
 
