--- a/app/src/main/res/layout/fragment_cash_sales_history.xml
+++ b/app/src/main/res/layout/fragment_cash_sales_history.xml
@@ -49,13 +49,12 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp">
 
-        <co.loystar.loystarbusiness.utils.ui.RecyclerViewOverrides.EmptyRecyclerView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/cash_sales_detail_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
 
-        <include layout="@layout/no_sales_view" />
     </RelativeLayout>
 
 </LinearLayout>
