--- a/app/src/main/res/layout/sale_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/sale_detail_bottom_sheet.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/main_content"
+        android:id="@+id/sales_history_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
