--- a/app/src/main/res/layout/sales_history_item.xml
+++ b/app/src/main/res/layout/sales_history_item.xml
@@ -12,6 +12,10 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?android:selectableItemBackground"
+            android:id="@+id/item_wrapper"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -34,12 +38,14 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/customerNameLabel"
                     android:layout_weight="1.2"
-                    android:id="@+id/products_bought"
                     android:layout_width="0dp"
+                    android:textSize="16sp"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimary"
                     android:layout_marginRight="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginEnd="8dp"/>
 
                 <TextView
                     android:layout_gravity="end"
@@ -47,6 +53,7 @@
                     android:layout_weight="0.8"
                     android:id="@+id/total_sales"
                     android:layout_width="0dp"
+                    android:textSize="16sp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/primaryTextColor"/>
 
