--- a/app/src/main/res/layout/fragment_card_sales_history.xml
+++ b/app/src/main/res/layout/fragment_card_sales_history.xml
@@ -5,43 +5,18 @@
     android:orientation="vertical"
     tools:context="co.loystar.loystarbusiness.fragments.CardSalesHistoryFragment">
 
-    <LinearLayout
+    <TextView
         android:layout_marginTop="4dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_sales"
-            android:textColor="@color/primaryTextColor"
-            android:textStyle="bold"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/total_card_sales"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:background="@color/green"
-                android:padding="8dp"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
+        android:id="@+id/total_card_sales"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:background="@color/green"
+        android:padding="8dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:minWidth="100dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <RelativeLayout
         android:layout_weight="1"
