--- a/app/src/main/res/layout/sale_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/sale_detail_bottom_sheet.xml
@@ -38,6 +38,19 @@
                 android:gravity="center"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:layout_marginTop="4dp"
+                android:id="@+id/total_sales"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:background="@color/green"
+                android:padding="8dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:minWidth="100dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
