temporarily disable customer support from settings.

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -44,10 +44,10 @@
         <extra android:name="settings" android:value="@string/settings_print" />
     </header>
 
-    <header
+    <!--<header
         android:id="@+id/loystar_support_pref_header"
         android:icon="@drawable/ic_customer_support_green_24px"
         android:title="@string/pref_support_title">
-    </header>
+    </header>-->
 
 </preference-headers>
