--- a/app/src/main/res/layout/activity_add_points.xml
+++ b/app/src/main/res/layout/activity_add_points.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/add_new_customer_wrapper"
     android:layout_height="match_parent"
-    tools:context="co.loystar.loystarbusiness.activities.AddNewCustomerActivity">
+    tools:context="co.loystar.loystarbusiness.activities.AddPointsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_new_customer" />
+    <include layout="@layout/content_add_points" />
 
 </android.support.design.widget.CoordinatorLayout>
