--- a/app/src/main/res/layout/activity_sale_without_pos.xml
+++ b/app/src/main/res/layout/activity_sale_without_pos.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_sale_without_pos_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
