--- a/app/src/main/res/layout/activity_birthday_offers_and_messaging.xml
+++ b/app/src/main/res/layout/activity_birthday_offers_and_messaging.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_birthday_offers_and_messaging_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
