--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -23,7 +23,7 @@
             app:toolbarId="@+id/activity_customer_detail">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/customer_detail_toolbar"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
