--- a/app/src/main/res/layout/loading_row.xml
+++ b/app/src/main/res/layout/loading_row.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content">
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
