--- a/app/src/main/res/xml/merchant_back_office_bottom_bar_tabs.xml
+++ b/app/src/main/res/xml/merchant_back_office_bottom_bar_tabs.xml
@@ -12,4 +12,8 @@
         id="@+id/orders"
         icon="@drawable/ic_view_orders"
         title="@string/orders" />
+    <tab
+        id="@+id/invoices"
+        icon="@drawable/ic_receipt_black"
+        title="@string/invoices"/>
 </tabs>
