--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/detail_wrapper"
     tools:context="co.loystar.loystarbusiness.activities.CustomerDetailActivity"
     tools:ignore="MergeRootFrame">
 
