--- a/app/src/main/res/layout/activity_invoice_pay.xml
+++ b/app/src/main/res/layout/activity_invoice_pay.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/invoice_wrapper"
     xmlns:tools="http://schemas.android.com/tools">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -77,10 +78,10 @@
             android:id="@+id/due_date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="32dp"
             android:text="@string/due_date_text"
-            app:layout_constraintStart_toStartOf="@+id/record_payment"
-            app:layout_constraintTop_toBottomOf="@+id/record_payment" />
+            app:layout_constraintStart_toStartOf="@+id/select_customer"
+            app:layout_constraintTop_toBottomOf="@+id/select_customer" />
 
         <TextView
             android:id="@+id/payment_message_text"
@@ -88,26 +89,47 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/payment_message"
-            app:layout_constraintStart_toStartOf="@+id/due_date_picker"
+            app:layout_constraintStart_toStartOf="@+id/payment_radio_group"
             app:layout_constraintTop_toBottomOf="@+id/payment_radio_group" />
 
+
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/payment_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/payment_type_text"
-            app:layout_constraintStart_toStartOf="@+id/due_date_picker"
-            app:layout_constraintTop_toBottomOf="@+id/due_date_picker" />
+            app:layout_constraintStart_toStartOf="@+id/record_payment"
+            app:layout_constraintTop_toBottomOf="@+id/record_payment" />
 
         <TextView
             android:id="@+id/recored_payment_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:text="@string/record_payment_text"
+            app:layout_constraintStart_toStartOf="@+id/due_date_picker"
+            app:layout_constraintTop_toBottomOf="@+id/due_date_picker" />
+
+        <TextView
+            android:id="@+id/select_customer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Select Customer: "
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/amount_due_text"
             app:layout_constraintTop_toBottomOf="@+id/amount_due_text" />
+
+        <TextView
+            android:id="@+id/selected_customer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="customer"
+            app:layout_constraintEnd_toEndOf="@+id/amount_due_value"
+            app:layout_constraintTop_toBottomOf="@+id/amount_due_value"
+            tools:text="Usman Danfodio" />
 
         <EditText
             android:id="@+id/payment_message"
@@ -127,12 +149,12 @@
 
         <EditText
             android:id="@+id/record_payment"
+            style="@style/FullBorderEditWhiteTextStyle"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="24dp"
             android:hint="@string/amount_payment_text"
             android:inputType="number"
-            style ="@style/FullBorderEditWhiteTextStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/recored_payment_text"
@@ -143,13 +165,15 @@
             style="@style/FullBorderEditWhiteTextStyle"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="32dp"
             android:clickable="true"
             android:cursorVisible="false"
-            android:focusableInTouchMode="false"
             android:focusable="true"
+            android:focusableInTouchMode="false"
             android:hint="@string/select_date"
-            app:layout_constraintStart_toStartOf="@+id/due_date_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.432"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/due_date_text" />
 
         <RadioGroup
@@ -158,8 +182,8 @@
             android:layout_height="31dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+            app:layout_constraintStart_toStartOf="@+id/payment_text"
+            app:layout_constraintTop_toBottomOf="@+id/payment_text">
 
             <RadioButton
                 android:id="@+id/cash_payment"
@@ -181,40 +205,16 @@
 
         </RadioGroup>
 
-
-        <Button
+        <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
             android:id="@+id/completePayment"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:background="@color/colorAccent"
-            android:text="@string/save_invoice_text"
-            android:textColor="@color/white"
+            android:layout_marginTop="16dp"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/payment_message"
             app:layout_constraintStart_toStartOf="@+id/payment_message"
             app:layout_constraintTop_toBottomOf="@+id/payment_message" />
-
-        <ProgressBar
-            android:id="@+id/create_invoice_loader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/completePayment" />
-
-        <Button
-            android:id="@+id/download_pdf"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            android:text="@string/download_pdf_text"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.063"
-            app:layout_constraintStart_toEndOf="@+id/completePayment" />
     </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
