--- a/app/src/main/res/layout/activity_invoice_list.xml
+++ b/app/src/main/res/layout/activity_invoice_list.xml
@@ -26,4 +26,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <include layout="@layout/empty_invoice_recycler_state" />
+
 </android.support.design.widget.CoordinatorLayout>
