--- a/app/src/main/res/layout/invoice_list_item.xml
+++ b/app/src/main/res/layout/invoice_list_item.xml
@@ -5,7 +5,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:layout_margin="8dp"
         android:elevation="10dp"
         android:id="@+id/invoice_card">
@@ -47,6 +47,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -55,12 +56,22 @@
                 app:layout_constraintStart_toStartOf="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
+            <TextView
+                android:id="@+id/created_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Created Date"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
             <android.support.constraint.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="106dp" />
+                app:layout_constraintGuide_begin="130dp" />
 
             <TextView
                 android:id="@+id/invoice_id"
@@ -100,8 +111,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/amount"
                 tools:text="paid" />
 
-        </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/created_date_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/status"
+                tools:text="20-10-3000" />
 
+        </android.support.constraint.ConstraintLayout>
 
 
     </android.support.v7.widget.CardView>
