--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,8 @@
     <color name="grayish_blue">#8899A6</color>
     <color name="wallet_hint_foreground_holo_dark">#808080</color>
     <color name="bg_material_dark">#ff212121</color>
+
+    <color name="bg_expiry_before">#f6cb34</color>
+    <color name="bg_expiry">#fb929c</color>
+    <color name="bg_expiry_button">#88C543</color>
 </resources>
