--- a/app/src/main/res/layout/invoice_list_item.xml
+++ b/app/src/main/res/layout/invoice_list_item.xml
@@ -5,7 +5,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:layout_margin="8dp"
         android:elevation="10dp"
         android:id="@+id/invoice_card">
@@ -66,6 +66,16 @@
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+            <TextView
+                android:id="@+id/created_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Created Time"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/created_text"
+                app:layout_constraintTop_toBottomOf="@+id/created_text" />
+
             <android.support.constraint.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
@@ -119,6 +129,15 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/status"
                 tools:text="20-10-3000" />
+
+            <TextView
+                android:id="@+id/created_time_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="1:20PM"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/created_date_value" />
 
         </android.support.constraint.ConstraintLayout>
 
