--- a/app/src/main/res/layout-sw600dp-land/activity_sale_with_pos.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_sale_with_pos.xml
@@ -27,17 +27,19 @@
         android:orientation="horizontal"
         android:baselineAligned="false">
 
-    <FrameLayout
-        android:id="@+id/fragment_product_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"/>
+        <FrameLayout
+            android:id="@+id/fragment_product_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+        </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_checkout_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        <FrameLayout
+            android:id="@+id/fragment_checkout_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
