--- a/app/src/main/res/layout/activity_sale_with_pos.xml
+++ b/app/src/main/res/layout/activity_sale_with_pos.xml
@@ -23,26 +23,13 @@
 
     <FrameLayout
         android:id="@+id/fragment_product_container"
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
         style="@style/Theme.ActionBar.HigherElevation"
         app:behavior_hideable="false"
         app:behavior_peekHeight="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-<!--    <FrameLayout-->
-<!--        app:layout_behavior="@string/bottom_sheet_behavior"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:fitsSystemWindows="true"-->
-<!--        android:clickable="true"-->
-<!--        android:focusable="true"-->
-<!--        style="@style/Theme.ActionBar.HigherElevation"-->
-<!--        app:behavior_hideable="false"-->
-<!--        app:behavior_peekHeight="0dp"-->
-<!--        android:id="@+id/order_summary_bs_wrapper">-->
-<!--        <include layout="@layout/order_summary_bottom_sheet" />-->
-<!--    </FrameLayout>-->
-<!--    <include layout="@layout/all_sale_with_pos" />-->
+        android:fitsSystemWindows="true"/>
 
 </android.support.design.widget.CoordinatorLayout>
