--- a/app/src/main/res/layout-w900dp/product_list_recycler.xml
+++ b/app/src/main/res/layout-w900dp/product_list_recycler.xml
@@ -1,83 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:baselineAligned="false"
+    android:layout_marginTop="?attr/actionBarSize"
     android:divider="?android:attr/dividerHorizontal"
-    android:paddingTop="?attr/actionBarSize"
     android:orientation="horizontal"
     android:showDividers="middle">
 
 
 
-    <android.support.constraint.ConstraintLayout
-        android:visibility="visible"
-        android:id="@+id/sortByCategory"
+<!--    <co.loystar.loystarbusiness.utils.ui.RecyclerViewOverrides.EmptyRecyclerView-->
+<!--        android:id="@+id/points_sale_order_items_rv"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/colorPrimaryDarker"-->
+<!--        android:layout_weight="2"-->
+<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+<!--        tools:layout_editor_absoluteX="0dp" />-->
+
+<!--    <include layout="@layout/empty_recycler_state_view" />-->
+
+    <RelativeLayout
         android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="2"
         android:background="@color/colorPrimaryDarker"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:paddingTop="5dp"
-            android:text="Sort By Category"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
-            android:id="@+id/productCategoriesSelectSpinner"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginLeft="52dp"
-            android:layout_marginTop="16dp"
-            android:entries="@array/empty_select"
-            android:prompt="@string/select_category_prompt"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <ImageView
-            android:id="@+id/sortByCategoryImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/productCategoriesSelectSpinner"
-            app:layout_constraintStart_toEndOf="@+id/productCategoriesSelectSpinner"
-            app:layout_constraintTop_toTopOf="@+id/productCategoriesSelectSpinner"
-            app:srcCompat="@drawable/ic_cancel_white_24px" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="co.loystar.loystarbusiness.activities.SaleWithPosActivity">
 
         <co.loystar.loystarbusiness.utils.ui.RecyclerViewOverrides.EmptyRecyclerView
             android:id="@+id/points_sale_order_items_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintTop_toTopOf="@+id/guideline2"
-            tools:layout_editor_absoluteX="0dp" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
 
-
-    <include layout="@layout/empty_recycler_state_view" />
+        <include layout="@layout/empty_recycler_state_view" />
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/fragment_checkout_container"
@@ -87,3 +64,4 @@
         android:layout_weight="1" />
 
 </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
