--- a/app/src/main/res/layout/content_add_product.xml
+++ b/app/src/main/res/layout/content_add_product.xml
@@ -87,6 +87,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/priceOfProduct" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/description_text"
+                style="@style/textViewLabelTextStyle"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/productDescription" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -127,6 +138,48 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/product_loyalty_program_explanation"
                 android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/tracking_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Should this product be tracked?"
+                android:layout_marginTop="16dp"/>
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/trackSwitch"
+                android:layout_width="wrap_content"
+                android:checked="false"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/stock_unit_text"
+                style="@style/textViewLabelTextStyle"/>
+
+            <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:id="@+id/stockUnitSpinner"
+                android:layout_gravity="center_horizontal"
+                android:prompt="@string/select_unit_prompt"
+                android:entries="@array/empty_select"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/product_quantity_text"
+                style="@style/textViewLabelTextStyle"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/productQuantity"
+                android:inputType="number"/>
         </LinearLayout>
 
     </ScrollView>
