--- a/app/src/main/res/layout/empty_recycler_state_view.xml
+++ b/app/src/main/res/layout/empty_recycler_state_view.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="gone"
+    android:layout_marginTop="?attr/actionBarSize"
     android:id="@+id/empty_items_container"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
