--- a/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
+++ b/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
@@ -73,151 +73,156 @@
 
 
         </android.support.v7.widget.CardView>
-
-        <android.support.constraint.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <LinearLayout
-                android:orientation="vertical"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:id="@+id/chartLayout"
-                android:visibility="gone"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_height="wrap_content">
-
-                    <Button
-                        android:id="@+id/viewHistoryBtn"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:text="@string/view_sales_history" />
+                    android:id="@+id/chartLayout"
+                    android:visibility="gone"
+                    android:layout_height="match_parent">
 
                     <LinearLayout
-                        android:id="@+id/linearLayout2"
-                        android:layout_width="0dp"
-                        android:gravity="end"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
 
-                        <TextView
-                            android:layout_gravity="center_horizontal"
-                            android:textStyle="bold"
-                            android:textSize="16sp"
-                            android:textColor="@color/primaryTextColor"
-                            android:id="@+id/total_sales_for_today_value"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_gravity="center_horizontal"
-                            android:id="@+id/total_sales_for_today_label"
-                            android:layout_width="wrap_content"
+                        <Button
+                            android:id="@+id/viewHistoryBtn"
+                            style="?android:attr/buttonBarButtonStyle"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/wallet_hint_foreground_holo_dark"
-                            android:text="@string/total_sales_for_today_label" />
+                            android:text="@string/view_sales_history" />
+
+                        <LinearLayout
+                            android:id="@+id/linearLayout2"
+                            android:layout_width="0dp"
+                            android:gravity="end"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_gravity="center_horizontal"
+                                android:textStyle="bold"
+                                android:textSize="16sp"
+                                android:textColor="@color/primaryTextColor"
+                                android:id="@+id/total_sales_for_today_value"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+
+                            <TextView
+                                android:layout_gravity="center_horizontal"
+                                android:id="@+id/total_sales_for_today_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/wallet_hint_foreground_holo_dark"
+                                android:text="@string/total_sales_for_today_label" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        card_view:cardUseCompatPadding="true"
+                        card_view:cardElevation="4dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginRight="1dp"
+                        android:layout_marginEnd="1dp"
+                        android:id="@+id/chartCardView">
+
+                        <com.github.mikephil.charting.charts.BarChart
+                            android:id="@+id/chart"
+                            android:layout_width="match_parent"
+                            android:layout_height="300dp"
+                            android:paddingBottom="@dimen/activity_vertical_margin"
+                            android:paddingTop="@dimen/activity_vertical_margin" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
+                        android:layout_width="200dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/startSaleBtn"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/record_sale"
+                        android:layout_gravity="center"/>
+
                 </LinearLayout>
 
-                <android.support.v7.widget.CardView
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    card_view:cardUseCompatPadding="true"
-                    card_view:cardElevation="4dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="1dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginEnd="1dp"
-                    android:id="@+id/chartCardView">
+                    android:id="@+id/emptyStateLayout"
+                    android:visibility="gone"
+                    android:layout_height="match_parent">
 
-                    <com.github.mikephil.charting.charts.BarChart
-                        android:id="@+id/chart"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin" />
+                    <android.support.constraint.Guideline
+                        android:id="@+id/guideline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintGuide_begin="40dp" />
 
-                </android.support.v7.widget.CardView>
+                    <ImageView
+                        android:contentDescription="@string/image"
+                        android:id="@+id/stateImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/guideline"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent" />
 
-                <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
-                    android:layout_width="200dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/startSaleBtn"
-                    android:layout_marginBottom="10dp"
-                    android:text="@string/record_sale"
-                    android:layout_gravity="center"/>
+                    <TextView
+                        android:id="@+id/stateIntroText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/stateImage" />
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/stateDescriptionText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:gravity="center"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:id="@+id/emptyStateLayout"
-                android:visibility="gone"
-                android:layout_height="match_parent">
+                    <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
+                        android:id="@+id/stateActionBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/stateDescriptionText" />
 
-                <android.support.constraint.Guideline
-                    android:id="@+id/guideline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_begin="40dp" />
-
-                <ImageView
-                    android:contentDescription="@string/image"
-                    android:id="@+id/stateImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/guideline"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent" />
-
-                <TextView
-                    android:id="@+id/stateIntroText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/stateImage" />
-
-                <TextView
-                    android:id="@+id/stateDescriptionText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
-
-                <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
-                    android:id="@+id/stateActionBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/stateDescriptionText" />
+                </android.support.constraint.ConstraintLayout>
 
             </android.support.constraint.ConstraintLayout>
 
-        </android.support.constraint.ConstraintLayout>
+        </ScrollView>
+
 
     </LinearLayout>
 
